@@ -1049,10 +1049,11 @@ int ntfs_attr_can_be_non_resident(const ntfs_volume *vol, const ATTR_TYPE type)
 	ATTR_DEF *ad;
 
 	/*
-	 * $DATA is always allowed to be non-resident even if $AttrDef does not
-	 * specify this in the flags of the $DATA attribute definition record.
+	 * $DATA and $EA are always allowed to be non-resident even if $AttrDef
+	 * does not specify this in the flags of the $DATA attribute definition
+	 * record.
 	 */
-	if (type == AT_DATA)
+	if (type == AT_DATA || type == AT_EA)
 		return 0;
 	/* Find the attribute definition record in $AttrDef. */
 	ad = ntfs_attr_find_in_attrdef(vol, type);
